--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <main>
     <div id="dd">
        
-    <video src="https://twitter.com/i/status/1633489031483752448"  height="50%" width="70%" controls loop muted autoplay style="border:2px solid black"></video>
+    <video src="x.mp4"  height="50%" width="70%" controls loop muted autoplay style="border:2px solid black"></video>
     <span id="c">
     <table>
         <caption><b>POINTS TABLE</b></caption>
