--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <nav>
                 
                 
-                    <a href="#">Matches</a>&nbsp;
+                    <a href="/">Matches</a>&nbsp;
                     <a href="#">Videos</a>&nbsp;
                     <a href="#">Stats</a>&nbsp;
                     <a href="#">Point Table</a>&nbsp;
