--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                 
                 
                     <a href="/">Matches</a>&nbsp;
-                    <a href="#">Videos</a>&nbsp;
-                    <a href="#">Stats</a>&nbsp;
-                    <a href="#">Point Table</a>&nbsp;
-                    <a href="#">Teams</a>&nbsp;
-                    <a href="#">Fantasy</a>&nbsp;
-                    <a href="#">News</a>&nbsp;
+                    <a href="/">Videos</a>&nbsp;
+                    <a href="/">Stats</a>&nbsp;
+                    <a href="/">Point Table</a>&nbsp;
+                    <a href="/">Teams</a>&nbsp;
+                    <a href="/">Fantasy</a>&nbsp;
+                    <a href="/">News</a>&nbsp;
                 </span>
 
             </nav>
@@ -163,7 +163,7 @@
         <div id="kolk">
             <h1>QUICK LINKS</h1><br>
             <ol >
-                <li><b>1.</b><a href="#" target="_blank">&nbsp;UPCOMING MATCH FIXTURES</a></li><br>
+                <li><b>1.</b><a href="/" target="_blank">&nbsp;UPCOMING MATCH FIXTURES</a></li><br>
                 <li><b>2.</b><a href="#" target="_blank">&nbsp;SCORECARD</a></li><br>
                 <li><b>3.</b><a href="#" target="_blank">&nbsp;ARAMCO ORANGE-CAP HOLDER</a></li><br>
                 <li><b>4.</b><a href="#" target="_blank">&nbsp;ARAMCO PURPLE-CAP HOLDER</a></li><br>
