--- a/index.html
+++ b/index.html
@@ -61,83 +61,83 @@
         </tr>
         <tr>
             <td>1. GT</td>
+            <td> 10</td>
+            <td> 4</td>
+            <td> 0</td>
+            <td> 20</td>
+            <td>+0.809</td>
+        </tr>
+        <tr>
+            <td>2. CSK</td>
+            <td> 8</td>
+            <td> 5</td>
+            <td> 1</td>
+            <td> 17</td>
+            <td>+0.652</td>
+        </tr>
+        <tr>
+            <td>3. LSG</td>
+            <td> 8</td>
+            <td> 5</td>
+            <td> 1</td>
+            <td> 17</td>
+            <td>+0.284</td>
+        </tr>
+        <tr>
+            <td>4. MI</td>
+            <td> 8</td>
             <td> 6</td>
-            <td> 3</td>
+            <td> 0</td>
+            <td> 16</td>
+            <td>-0.044</td>
+        </tr>
+        <tr>
+            <td>5. RR</td>
+            <td> 7</td>
+            <td> 7</td>
+            <td> 0</td>
+            <td> 14</td>
+            <td>+0.148</td>
+        </tr>
+        <tr>
+            <td>6. RCB</td>
+            <td> 7</td>
+            <td> 7</td>
+            <td> 0</td>
+            <td> 14</td>
+            <td>+0.135</td>
+        </tr>
+        <tr>
+            <td>7.KKR</td>
+            <td> 6</td>
+            <td> 8</td>
             <td> 0</td>
             <td> 12</td>
-            <td>+0.532</td>
+            <td>-0.239</td>
         </tr>
         <tr>
-            <td>2. LSG</td>
-            <td> 5</td>
-            <td> 4</td>
-            <td> 1</td>
-            <td> 11</td>
-            <td>+0.639</td>
-        </tr>
-        <tr>
-            <td>3. CSK</td>
-            <td> 5</td>
-            <td> 4</td>
-            <td> 1</td>
-            <td> 11</td>
-            <td>+0.329</td>
-        </tr>
-        <tr>
-            <td>4. RR</td>
-            <td> 5</td>
-            <td> 4</td>
-            <td> 0</td>
-            <td> 10</td>
-            <td>+0.800</td>
-        </tr>
-        <tr>
-            <td>5. RCB</td>
-            <td> 5</td>
-            <td> 4</td>
-            <td> 0</td>
-            <td> 10</td>
-            <td>-0.030</td>
-        </tr>
-        <tr>
-            <td>6. MI</td>
-            <td> 5</td>
-            <td> 4</td>
-            <td> 0</td>
-            <td> 10</td>
-            <td>-0.373</td>
-        </tr>
-        <tr>
-            <td>7.PBKS</td>
-            <td> 5</td>
-            <td> 5</td>
-            <td> 0</td>
-            <td> 10</td>
-            <td>-0.472</td>
-        </tr>
-        <tr>
-            <td>8. KKR</td>
-            <td> 4</td>
+            <td>8. PBKS</td>
             <td> 6</td>
+            <td> 8</td>
+            <td> 0</td>
+            <td> 12</td>
+            <td>-0.304</td>
+        </tr>
+        <tr>
+            <td>9. DC</td>
+            <td> 5</td>
+            <td> 9</td>
+            <td> 0</td>
+            <td> 10</td>
+            <td>-0.808</td>
+        </tr>
+        <tr>
+            <td>10. SRH</td>
+            <td> 4</td>
+            <td> 10</td>
             <td> 0</td>
             <td> 8</td>
-            <td>-0.103</td>
-        </tr>
-        <tr>
-            <td>9. SRH</td>
-            <td> 3</td>
-            <td> 6</td>
-            <td> 0</td>
-            <td> 6</td>
-            <td>-0.540</td>
-        </tr>
-        <tr>
-            <td>10. DC</td>
-            <td> 3</td>
-            <td> 6</td>
-            <td> 0</td>
-            <td> 6</td>
-            <td>-0.768</td>
+            <td>-0.590</td>
         </tr>
        
     </table>
@@ -163,8 +163,8 @@
         <div id="kolk">
             <h1>QUICK LINKS</h1><br>
             <ol >
-                <li><b>1.</b><a href="/" >&nbsp;UPCOMING MATCH FIXTURES</a></li><br>
-                <li><b>2.</b><a href="/" ></a>&nbsp;SCORECARD</a></li><br>
+                <li><b>1.</b><a href="#" target="_blank">&nbsp;UPCOMING MATCH FIXTURES</a></li><br>
+                <li><b>2.</b><a href="#" target="_blank"></a>&nbsp;SCORECARD</a></li><br>
                 <li><b>3.</b><a href="#" target="_blank">&nbsp;ARAMCO ORANGE-CAP HOLDER</a></li><br>
                 <li><b>4.</b><a href="#" target="_blank">&nbsp;ARAMCO PURPLE-CAP HOLDER</a></li><br>
                 <li><b>5.</b><a href="#" target="_blank">&nbsp;HERBALIFE ACTIVE CATCHES</a></li><br>
