--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
     
     </div>
     <div class="l">
-        <h2 style="text-align:center"><b>GUJARAT TITANS IS THE WINNER OF IPL 2023</b></h2>
+        <marquee style="text-align:center"><b>GUJARAT TITANS IS THE WINNER OF IPL 2023</b></marquee>
     </div>
 
 
 <main>
     <div id="dd">
        
-    <video src="x.mp4"  height="50%" width="70%" controls loop muted autoplay style="border:2px solid black"></video>
+    <video src="x.mp4"  height="50%" width="67.5%" controls loop muted autoplay style="border:2px solid black"></video>
     <span id="c">
     <table>
         <caption><b>POINTS TABLE</b></caption>
