--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <h1>QUICK LINKS</h1><br>
             <ol >
                 <li><b>1.</b><a href="#" target="_blank">&nbsp;UPCOMING MATCH FIXTURES</a></li><br>
-                <li><b>2.</b><a href="#" target="_blank"></a>&nbsp;SCORECARD</a></li><br>
+                <li><b>2.</b><a href="#" target="_blank">&nbsp;SCORECARD</a></li><br>
                 <li><b>3.</b><a href="#" target="_blank">&nbsp;ARAMCO ORANGE-CAP HOLDER</a></li><br>
                 <li><b>4.</b><a href="#" target="_blank">&nbsp;ARAMCO PURPLE-CAP HOLDER</a></li><br>
                 <li><b>5.</b><a href="#" target="_blank">&nbsp;HERBALIFE ACTIVE CATCHES</a></li><br>
